2003-12-15  Katsumi Yamaoka  <yamaoka@jpl.org>

	* nnmail.el (nnmail-split-fancy): Make it customizable with Emacs
	20 as well.

2003-12-15  Simon Josefsson  <jas@extundo.com>

	* sha1-el.el (autoload): Ignore errors for
	executable-find. (XEmacs ecrypto does not require sh-script where
	executable.el is located.)
	(sha1-use-external): Likewise.

	* sha1-el.el (sha1): Add defgroup.
	(sha1-maximum-internal-length, sha1-program, sha1-use-external)
	(sha1-program): Use 'sha1sum' from GNU CoreUtils instead of OpenSSL.
	(sha1): Autoload.

	* nndraft.el (nndraft-request-move-article): Copy definition of
	nnmh-request-move-article instead of calling it, because the nnmh
	version uses nnmh-request-article which isn't the same as the
	nndraft version.

2003-12-13  Teodor Zlatanov  <tzz@lifelogs.com>

	* spam.el: added some gnus-registry autoloads
	(spam-split-symbolic-return): makes spam-split return 'spam
	instead of the value of spam-split-group when spam is detected
	(spam-split-symbolic-return-positive): makes spam-split return
	'ham instead of nil when ham is detected
	(spam-autodetect-recheck-messages): tells spam.el whether it
	should recheck all messages in a group, or only the unseen ones
	(spam-split-last-successful-check): spam-split will set this to
	the last successful check; this was seen as a cleaner approach
	than returning a cell like '(spam spam-use-bogofilter)
	(spam-list-of-checks): documentation appended
	(spam-split): accomodate the spam-split-symbolic-return and
	spam-split-symbolic-return-positive variables
	(spam-find-spam): new function called when the summary is built
	(spam-log-registered-p): checks if a ham or spam registration has
	already been done for an article
	(spam-check-regex-headers, spam-check-blackholes, spam-check-BBDB)
	(spam-check-ifile, spam-check-stat, spam-check-whitelist)
	(spam-check-blacklist, spam-check-bogofilter-headers)
	(spam-check-spamoracle): respect the spam-split-symbolic-return